Add exchange infor warning message in two party chats